contrast fixes

--- a/gamenight/styles/siteplan.css
+++ b/gamenight/styles/siteplan.css
@@ -1,5 +1,5 @@
 :root {
-    --red: #D72638;
+    --red: #c12131;
     --gray: #8A8D91;
     --green: #D6F6DD;
     --black: #1E2019;
@@ -68,11 +68,11 @@ img {
 }
 footer {
     margin-top: 2rem;
-}
-footer {
     text-align: center;
     padding: .5rem;
     background-color: var(--red);
-    color: var(--black);
     font-size: 1.2rem;
+}
+#currentyear, #lastModified, footer p {
+    color: white;
 }
